Convert last tests